fix: fix scrollbar behavior

--- a/rs-css/src/components/menu/menu.css
+++ b/rs-css/src/components/menu/menu.css
@@ -111,12 +111,6 @@ ul {
   transform: translateY(3px);
 }
 
-.overlay {
-  width: 0;
-  height: 0;
-  opacity: 0;
-}
-
 @media (max-width: 1000px) {
 
   .levels-wrapper {
@@ -146,7 +140,7 @@ ul {
     position: absolute;
     width: 30px;
     height: 90px;
-    top: 360px;
+    top: 380px;
     left: -10px;
     transform: translateX(-100%);
     padding-bottom: 5px;
@@ -156,7 +150,7 @@ ul {
     writing-mode: vertical-rl;
     text-orientation: upright;
     letter-spacing: -0.3em;
-    color: rgb(255, 255, 255, 0.8);
+    color: rgb(255, 211, 200);
     background-color: rgb(129, 28, 2);
     border-top-left-radius: 22px;
     border-bottom-left-radius: 22px;
@@ -180,8 +174,8 @@ ul {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    bottom: 0;
+    right: 0;
     background-color: rgb(0, 0, 0);
     opacity: 0.3;
   }
